// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager/npm/extract .extractDependencies() extracts engines 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "1.6.0",
      "depName": "angular",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "purl": "pkg:npm/angular",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "1.6.0",
      "depName": "@angular/cli",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
      "purl": "pkg:npm/%40angular/cli",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "*",
      "depName": "foo",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
      "purl": "pkg:npm/foo",
      "skipReason": "any-version",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "file:../foo/bar",
      "depName": "bar",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
      "skipReason": "file",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "",
      "depName": "baz",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
      "purl": "pkg:npm/baz",
      "skipReason": "empty",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "latest",
      "depName": "other",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
      "skipReason": "unknown-version",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": ">=1.7.0 <2.0.0",
      "depName": "atom",
      "depType": "engines",
      "prettyDepType": "engine",
      "skipReason": "unknown-engines",
      "versionScheme": "semver",
    },
    Object {
      "commitMessageTopic": "Node.js",
      "currentValue": ">= 8.9.2",
      "depName": "node",
      "depType": "engines",
      "major": Object {
        "enabled": false,
      },
      "prettyDepType": "engine",
      "purl": "pkg:github/nodejs/node?sanitize=true",
      "versionScheme": "semver",
    },
    Object {
      "commitMessageTopic": "npm",
      "currentValue": "^8.0.0",
      "depName": "npm",
      "depType": "engines",
      "prettyDepType": "engine",
      "purl": "pkg:npm/npm",
      "versionScheme": "semver",
    },
    Object {
      "commitMessageTopic": "Yarn",
      "currentValue": "disabled",
      "depName": "yarn",
      "depType": "engines",
      "prettyDepType": "engine",
      "purl": "pkg:npm/yarn",
      "skipReason": "unknown-version",
      "versionScheme": "semver",
    },
  ],
  "lernaClient": undefined,
  "lernaDir": undefined,
  "lernaPackages": undefined,
  "npmLock": undefined,
  "npmrc": undefined,
  "packageJsonName": undefined,
  "packageJsonType": "app",
  "packageJsonVersion": undefined,
  "pnpmShrinkwrap": undefined,
  "yarnLock": undefined,
  "yarnWorkspacesPackages": undefined,
  "yarnrc": undefined,
}
`;

exports[`manager/npm/extract .extractDependencies() finds a lock file 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "6.5.0",
      "depName": "autoprefixer",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "purl": "pkg:npm/autoprefixer",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "~1.6.0",
      "depName": "bower",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "purl": "pkg:npm/bower",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "13.1.0",
      "depName": "browserify",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "purl": "pkg:npm/browserify",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "0.9.2",
      "depName": "browserify-css",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "purl": "pkg:npm/browserify-css",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "=0.22.0",
      "depName": "cheerio",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "purl": "pkg:npm/cheerio",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "1.21.0",
      "depName": "config",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "purl": "pkg:npm/config",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "^1.5.8",
      "depName": "angular",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
      "purl": "pkg:npm/angular",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "1.5.8",
      "depName": "angular-touch",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
      "purl": "pkg:npm/angular-touch",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "1.5.8",
      "depName": "angular-sanitize",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
      "purl": "pkg:npm/angular-sanitize",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "4.0.0-beta.1",
      "depName": "@angular/core",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
      "purl": "pkg:npm/%40angular/core",
      "versionScheme": "semver",
    },
  ],
  "lernaClient": undefined,
  "lernaDir": undefined,
  "lernaPackages": undefined,
  "npmLock": undefined,
  "npmrc": undefined,
  "packageJsonName": "renovate",
  "packageJsonType": "app",
  "packageJsonVersion": "1.0.0",
  "pnpmShrinkwrap": undefined,
  "yarnLock": "yarn.lock",
  "yarnWorkspacesPackages": undefined,
  "yarnrc": undefined,
}
`;

exports[`manager/npm/extract .extractDependencies() finds complex yarn workspaces 1`] = `
Object {
  "deps": Array [],
  "lernaClient": "npm",
  "lernaDir": ".",
  "lernaPackages": undefined,
  "npmLock": undefined,
  "npmrc": undefined,
  "packageJsonName": "@a/b",
  "packageJsonType": "app",
  "packageJsonVersion": "0.0.8",
  "pnpmShrinkwrap": undefined,
  "yarnLock": undefined,
  "yarnWorkspacesPackages": Array [
    "packages/*",
  ],
  "yarnrc": undefined,
}
`;

exports[`manager/npm/extract .extractDependencies() finds lerna 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "6.5.0",
      "depName": "autoprefixer",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "purl": "pkg:npm/autoprefixer",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "~1.6.0",
      "depName": "bower",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "purl": "pkg:npm/bower",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "13.1.0",
      "depName": "browserify",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "purl": "pkg:npm/browserify",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "0.9.2",
      "depName": "browserify-css",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "purl": "pkg:npm/browserify-css",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "=0.22.0",
      "depName": "cheerio",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "purl": "pkg:npm/cheerio",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "1.21.0",
      "depName": "config",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "purl": "pkg:npm/config",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "^1.5.8",
      "depName": "angular",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
      "purl": "pkg:npm/angular",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "1.5.8",
      "depName": "angular-touch",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
      "purl": "pkg:npm/angular-touch",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "1.5.8",
      "depName": "angular-sanitize",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
      "purl": "pkg:npm/angular-sanitize",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "4.0.0-beta.1",
      "depName": "@angular/core",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
      "purl": "pkg:npm/%40angular/core",
      "versionScheme": "semver",
    },
  ],
  "lernaClient": "npm",
  "lernaDir": ".",
  "lernaPackages": undefined,
  "npmLock": undefined,
  "npmrc": undefined,
  "packageJsonName": "renovate",
  "packageJsonType": "app",
  "packageJsonVersion": "1.0.0",
  "pnpmShrinkwrap": undefined,
  "yarnLock": undefined,
  "yarnWorkspacesPackages": undefined,
  "yarnrc": undefined,
}
`;

exports[`manager/npm/extract .extractDependencies() returns an array of dependencies 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "6.5.0",
      "depName": "autoprefixer",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "purl": "pkg:npm/autoprefixer",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "~1.6.0",
      "depName": "bower",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "purl": "pkg:npm/bower",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "13.1.0",
      "depName": "browserify",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "purl": "pkg:npm/browserify",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "0.9.2",
      "depName": "browserify-css",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "purl": "pkg:npm/browserify-css",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "=0.22.0",
      "depName": "cheerio",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "purl": "pkg:npm/cheerio",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "1.21.0",
      "depName": "config",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "purl": "pkg:npm/config",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "^1.5.8",
      "depName": "angular",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
      "purl": "pkg:npm/angular",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "1.5.8",
      "depName": "angular-touch",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
      "purl": "pkg:npm/angular-touch",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "1.5.8",
      "depName": "angular-sanitize",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
      "purl": "pkg:npm/angular-sanitize",
      "versionScheme": "semver",
    },
    Object {
      "currentValue": "4.0.0-beta.1",
      "depName": "@angular/core",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
      "purl": "pkg:npm/%40angular/core",
      "versionScheme": "semver",
    },
  ],
  "lernaClient": undefined,
  "lernaDir": undefined,
  "lernaPackages": undefined,
  "npmLock": undefined,
  "npmrc": undefined,
  "packageJsonName": "renovate",
  "packageJsonType": "app",
  "packageJsonVersion": "1.0.0",
  "pnpmShrinkwrap": undefined,
  "yarnLock": undefined,
  "yarnWorkspacesPackages": undefined,
  "yarnrc": undefined,
}
`;
